--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,8 +1,12 @@
 {{>layout/header}}
-<h1>스프링 부트로 시작하는 웹 서비스 Ver.2</h1>
-<div class="col-md-12">
-    <div class="row">
-        <div class="col-md-6">
+<div class="topcontent-form">
+    <h1> 자주 묻는 질문 </h1>
+    <p> 찾으시는 내용이 없다면 고객센터를 방문해주시길 바랍니다</p>
+</div>
+
+<div class="board-btns-wrapper">
+    <div class="board-wrapper-row">
+        <div class="board-btns">
             <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
             {{#userName}}
                 Logged in as : <span id="user">{{userName}}</span>
@@ -14,26 +18,49 @@
             {{/userName}}
         </div>
     </div>
-    <br>
-    <table class="table table-horizontal table-bordered">
-        <thead class="thead-strong">
+</div>
+
+<div class="middle-flex-form">
+    <div class="middle-content-form">
+        <div class="middle-content-form-right">
+            <div class="right-img-box">
+                <img class="email_img" src={email_img} width="50px" height="50px"></img>
+            </div>
+            <div class="right-text-box">
+                <h3> 이메일 문의하기</h3>
+                <p> 찾으시는 답변이 없으신가요 ? </p>
+            </div>
+            <div class="right-btn-box">
+                <button class="send-btn" id="email-btn"}>
+                E-mail 보내기{' '}
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="subcontent-form">
+    <div class="maincontent-form">
+        <br>
+        <table class="table table-horizontal table-bordered">
+            <thead class="thead-strong">
             <tr>
                 <th>게시글 번호</th>
                 <th>제목</th>
                 <th>작성자</th>
-                <th>최종수정일</th>
             </tr>
-        </thead>
-        <tbody id="tbody">
-        {{#posts}}
-            <tr>
-                <td>{{id}}</td>
-                <td><a href="/posts/update/{{id}}">{{title}}</a></td>
-                <td>{{author}}</td>
-                <td>{{modifiedDate}}</td>
-            </tr>
-        {{/posts}}
-        </tbody>
-    </table>
+            </thead>
+            <tbody id="tbody">
+            {{#posts}}
+                <tr>
+                    <td>{{id}}</td>
+                    <td><a href="/posts/update/{{id}}">{{title}}</a></td>
+                    <td>{{author}}</td>
+                </tr>
+            {{/posts}}
+            </tbody>
+        </table>
+    </div>
 </div>
+
 {{>layout/footer}}
