--- a/src/main/resources/templates/posts-update.mustache
+++ b/src/main/resources/templates/posts-update.mustache
@@ -1,28 +1,30 @@
 {{>layout/header}}
-<h1>게시글 수정</h1>
 <div class="col-md-12">
     <div class="col-md-4">
+        {{#posts}}
         <form>
             <div class="form-group">
                 <label for="id">글 번호</label>
-                <input type="text" class="form-control" id="id" value="{{post.id}}" readonly>
+                <input type="text" class="form-control" id="id" value="{{posts.id}}" readonly>
             </div>
             <div class="form-group">
                 <label for="title">제목</label>
-                <input type="text" class="form-control" id="title" value="{{post.title}}">
+                <input type="text" class="form-control" id="title" value="{{posts.title}}">
             </div>
             <div class="form-group">
                 <label for="author">작성자</label>
-                <input type="text" class="form-control" id="author" value="{{post.author}}" readonly>
+                <input type="text" class="form-control" id="author" value="{{posts.author}}" readonly>
             </div>
             <div class="form-group">
                 <label for="content">내용</label>
-                <textarea id="content">{{post.content}}</textarea>
+                <textarea class="form-control" id="content" value="{{posts.content}}"></textarea>
             </div>
         </form>
+        {{/posts}}
         <a href="/" role="button" class="btn btn-secondary">취소</a>
-        <button type="button" class="btn btn-primary" id="btn-update">수정 완료</button>
+        <button type="button" class="btn btn-primary" id="btn-update">등록</button>
         <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
     </div>
 </div>
+
 {{>layout/footer}}
